--- a/index.html
+++ b/index.html
@@ -1,4 +1,19 @@
-<head>
+<!DOCTYPE html>
+<html>
+  
+  <head>
   <title>LMAX WORLD</title>
 </head>
+  
 <h1>hello ! UNDER DEVELOPMET !</h1>
+  
+<body>
+
+<h1>My first PHP page</h1>
+
+<?php
+echo "Hello World!";
+?>
+
+</body>
+</html>
